exports[`Table.expand controlled by expandedRowKeys 1`] = `
<Table
  bodyStyle={Object {}}
  childrenColumnName="children"
  columns={
    Array [
      Object {
        "dataIndex": "name",
        "key": "name",
        "title": "Name",
      },
      Object {
        "dataIndex": "age",
        "key": "age",
        "title": "Age",
      },
    ]
  }
  data={
    Array [
      Object {
        "age": 27,
        "key": 0,
        "name": "Lucy",
      },
      Object {
        "age": 28,
        "key": 1,
        "name": "Jack",
      },
    ]
  }
  defaultExpandAllRows={false}
  defaultExpandedRowKeys={Array []}
  emptyText={[Function]}
  expandIconAsCell={false}
  expandIconColumnIndex={0}
  expandedRowClassName={[Function]}
  expandedRowKeys={
    Array [
      0,
    ]
  }
  expandedRowRender={[Function]}
  getBodyWrapper={[Function]}
  indentSize={15}
  onExpand={[Function]}
  onExpandedRowsChange={[Function]}
  onRowClick={[Function]}
  onRowDoubleClick={[Function]}
  prefixCls="rc-table"
  rowClassName={[Function]}
  rowKey="key"
  rowRef={[Function]}
  scroll={Object {}}
  showHeader={true}
  style={Object {}}
  useFixedHeader={false}>
  <div
    className="rc-table rc-table-scroll-position-left"
    style={Object {}}>
    <div
      className="rc-table-content">
      <div
        className="rc-table-body"
        onMouseOver={[Function]}
        onScroll={[Function]}
        onTouchStart={[Function]}
        style={Object {}}>
        <table
          className=""
          style={Object {}}>
          <colgroup>
            <col
              style={
                Object {
                  "minWidth": undefined,
                  "width": undefined,
                }
              } />
            <col
              style={
                Object {
                  "minWidth": undefined,
                  "width": undefined,
                }
              } />
          </colgroup>
          <TableHeader
            prefixCls="rc-table"
            rowStyle={null}
            rows={
              Array [
                Array [
                  Object {
                    "children": "Name",
                    "className": "",
                    "key": "name",
                  },
                  Object {
                    "children": "Age",
                    "className": "",
                    "key": "age",
                  },
                ],
              ]
            }>
            <thead
              className="rc-table-thead">
              <tr
                style={null}>
                <th
                  className="">
                  Name
                </th>
                <th
                  className="">
                  Age
                </th>
              </tr>
            </thead>
          </TableHeader>
          <tbody
            className="rc-table-tbody">
            <TableRow
              childrenColumnName="children"
              className=""
              columns={
                Array [
                  Object {
                    "dataIndex": "name",
                    "key": "name",
                    "title": "Name",
                  },
                  Object {
                    "dataIndex": "age",
                    "key": "age",
                    "title": "Age",
                  },
                ]
              }
              expandIconAsCell={false}
              expandIconColumnIndex={0}
              expandRowByClick={false}
              expandable={[Function]}
              expanded={true}
              height={null}
              hoverKey={0}
              indent={0}
              indentSize={15}
              index={0}
              needIndentSpaced={false}
              onDestroy={[Function]}
              onExpand={[Function]}
              onHover={[Function]}
              onRowClick={[Function]}
              onRowDoubleClick={[Function]}
              prefixCls="rc-table-row"
              record={
                Object {
                  "age": 27,
                  "key": 0,
                  "name": "Lucy",
                }
              }
              store={
                Object {
                  "getState": [Function],
                  "setState": [Function],
                  "subscribe": [Function],
                }
              }
              visible={true}>
              <tr
                className="rc-table-row  rc-table-row-level-0"
                onClick={[Function]}
                onDoubleClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "height": null,
                  }
                }>
                <TableCell
                  column={
                    Object {
                      "dataIndex": "name",
                      "key": "name",
                      "title": "Name",
                    }
                  }
                  expandIcon={
                    <ExpandIcon
                      expandable={[Function]}
                      expanded={true}
                      needIndentSpaced={false}
                      onExpand={[Function]}
                      prefixCls="rc-table-row"
                      record={
                        Object {
                          "age": 27,
                          "key": 0,
                          "name": "Lucy",
                        }
                      } />
                  }
                  indent={0}
                  indentSize={15}
                  index={0}
                  prefixCls="rc-table-row"
                  record={
                    Object {
                      "age": 27,
                      "key": 0,
                      "name": "Lucy",
                    }
                  }>
                  <td
                    className=""
                    onClick={[Function]}>
                    <span
                      className="rc-table-row-indent indent-level-0"
                      style={
                        Object {
                          "paddingLeft": "0px",
                        }
                      } />
                    <ExpandIcon
                      expandable={[Function]}
                      expanded={true}
                      needIndentSpaced={false}
                      onExpand={[Function]}
                      prefixCls="rc-table-row"
                      record={
                        Object {
                          "age": 27,
                          "key": 0,
                          "name": "Lucy",
                        }
                      }>
                      <span
                        className="rc-table-row-expand-icon rc-table-row-expanded"
                        onClick={[Function]} />
                    </ExpandIcon>
                    Lucy
                  </td>
                </TableCell>
                <TableCell
                  column={
                    Object {
                      "dataIndex": "age",
                      "key": "age",
                      "title": "Age",
                    }
                  }
                  expandIcon={null}
                  indent={0}
                  indentSize={15}
                  index={0}
                  prefixCls="rc-table-row"
                  record={
                    Object {
                      "age": 27,
                      "key": 0,
                      "name": "Lucy",
                    }
                  }>
                  <td
                    className=""
                    onClick={[Function]}>
                    27
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              className=""
              columns={
                Array [
                  Object {
                    "key": "extra-row",
                    "render": [Function],
                  },
                ]
              }
              expandIconColumnIndex={0}
              expandRowByClick={false}
              expandable={false}
              indent={1}
              onDestroy={[Function]}
              onHover={[Function]}
              onRowClick={[Function]}
              onRowDoubleClick={[Function]}
              prefixCls="rc-table-expanded-row"
              store={
                Object {
                  "getState": [Function],
                  "setState": [Function],
                  "subscribe": [Function],
                }
              }
              visible={true}>
              <tr
                className="rc-table-expanded-row  rc-table-expanded-row-level-1"
                onClick={[Function]}
                onDoubleClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "height": undefined,
                  }
                }>
                <TableCell
                  column={
                    Object {
                      "key": "extra-row",
                      "render": [Function],
                    }
                  }
                  expandIcon={
                    <ExpandIcon
                      expandable={false}
                      expanded={undefined}
                      needIndentSpaced={undefined}
                      onExpand={undefined}
                      prefixCls="rc-table-expanded-row"
                      record={undefined} />
                  }
                  indent={1}
                  prefixCls="rc-table-expanded-row">
                  <td
                    className=""
                    colSpan={2}
                    onClick={[Function]}>
                    <span
                      className="rc-table-expanded-row-indent indent-level-1"
                      style={
                        Object {
                          "paddingLeft": "NaNpx",
                        }
                      } />
                    <ExpandIcon
                      expandable={false}
                      prefixCls="rc-table-expanded-row" />
                    <p>
                      extra data
                    </p>
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              childrenColumnName="children"
              className=""
              columns={
                Array [
                  Object {
                    "dataIndex": "name",
                    "key": "name",
                    "title": "Name",
                  },
                  Object {
                    "dataIndex": "age",
                    "key": "age",
                    "title": "Age",
                  },
                ]
              }
              expandIconAsCell={false}
              expandIconColumnIndex={0}
              expandRowByClick={false}
              expandable={[Function]}
              expanded={false}
              height={null}
              hoverKey={1}
              indent={0}
              indentSize={15}
              index={1}
              needIndentSpaced={false}
              onDestroy={[Function]}
              onExpand={[Function]}
              onHover={[Function]}
              onRowClick={[Function]}
              onRowDoubleClick={[Function]}
              prefixCls="rc-table-row"
              record={
                Object {
                  "age": 28,
                  "key": 1,
                  "name": "Jack",
                }
              }
              store={
                Object {
                  "getState": [Function],
                  "setState": [Function],
                  "subscribe": [Function],
                }
              }
              visible={true}>
              <tr
                className="rc-table-row  rc-table-row-level-0"
                onClick={[Function]}
                onDoubleClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "height": null,
                  }
                }>
                <TableCell
                  column={
                    Object {
                      "dataIndex": "name",
                      "key": "name",
                      "title": "Name",
                    }
                  }
                  expandIcon={
                    <ExpandIcon
                      expandable={[Function]}
                      expanded={false}
                      needIndentSpaced={false}
                      onExpand={[Function]}
                      prefixCls="rc-table-row"
                      record={
                        Object {
                          "age": 28,
                          "key": 1,
                          "name": "Jack",
                        }
                      } />
                  }
                  indent={0}
                  indentSize={15}
                  index={1}
                  prefixCls="rc-table-row"
                  record={
                    Object {
                      "age": 28,
                      "key": 1,
                      "name": "Jack",
                    }
                  }>
                  <td
                    className=""
                    onClick={[Function]}>
                    <span
                      className="rc-table-row-indent indent-level-0"
                      style={
                        Object {
                          "paddingLeft": "0px",
                        }
                      } />
                    <ExpandIcon
                      expandable={[Function]}
                      expanded={false}
                      needIndentSpaced={false}
                      onExpand={[Function]}
                      prefixCls="rc-table-row"
                      record={
                        Object {
                          "age": 28,
                          "key": 1,
                          "name": "Jack",
                        }
                      }>
                      <span
                        className="rc-table-row-expand-icon rc-table-row-collapsed"
                        onClick={[Function]} />
                    </ExpandIcon>
                    Jack
                  </td>
                </TableCell>
                <TableCell
                  column={
                    Object {
                      "dataIndex": "age",
                      "key": "age",
                      "title": "Age",
                    }
                  }
                  expandIcon={null}
                  indent={0}
                  indentSize={15}
                  index={1}
                  prefixCls="rc-table-row"
                  record={
                    Object {
                      "age": 28,
                      "key": 1,
                      "name": "Jack",
                    }
                  }>
                  <td
                    className=""
                    onClick={[Function]}>
                    28
                  </td>
                </TableCell>
              </tr>
            </TableRow>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</Table>
`;

exports[`Table.expand controlled by expandedRowKeys 2`] = `
<Table
  bodyStyle={Object {}}
  childrenColumnName="children"
  columns={
    Array [
      Object {
        "dataIndex": "name",
        "key": "name",
        "title": "Name",
      },
      Object {
        "dataIndex": "age",
        "key": "age",
        "title": "Age",
      },
    ]
  }
  data={
    Array [
      Object {
        "age": 27,
        "key": 0,
        "name": "Lucy",
      },
      Object {
        "age": 28,
        "key": 1,
        "name": "Jack",
      },
    ]
  }
  defaultExpandAllRows={false}
  defaultExpandedRowKeys={Array []}
  emptyText={[Function]}
  expandIconAsCell={false}
  expandIconColumnIndex={0}
  expandedRowClassName={[Function]}
  expandedRowKeys={
    Array [
      1,
    ]
  }
  expandedRowRender={[Function]}
  getBodyWrapper={[Function]}
  indentSize={15}
  onExpand={[Function]}
  onExpandedRowsChange={[Function]}
  onRowClick={[Function]}
  onRowDoubleClick={[Function]}
  prefixCls="rc-table"
  rowClassName={[Function]}
  rowKey="key"
  rowRef={[Function]}
  scroll={Object {}}
  showHeader={true}
  style={Object {}}
  useFixedHeader={false}>
  <div
    className="rc-table rc-table-scroll-position-left"
    style={Object {}}>
    <div
      className="rc-table-content">
      <div
        className="rc-table-body"
        onMouseOver={[Function]}
        onScroll={[Function]}
        onTouchStart={[Function]}
        style={Object {}}>
        <table
          className=""
          style={Object {}}>
          <colgroup>
            <col
              style={
                Object {
                  "minWidth": undefined,
                  "width": undefined,
                }
              } />
            <col
              style={
                Object {
                  "minWidth": undefined,
                  "width": undefined,
                }
              } />
          </colgroup>
          <TableHeader
            prefixCls="rc-table"
            rowStyle={null}
            rows={
              Array [
                Array [
                  Object {
                    "children": "Name",
                    "className": "",
                    "key": "name",
                  },
                  Object {
                    "children": "Age",
                    "className": "",
                    "key": "age",
                  },
                ],
              ]
            }>
            <thead
              className="rc-table-thead">
              <tr
                style={null}>
                <th
                  className="">
                  Name
                </th>
                <th
                  className="">
                  Age
                </th>
              </tr>
            </thead>
          </TableHeader>
          <tbody
            className="rc-table-tbody">
            <TableRow
              childrenColumnName="children"
              className=""
              columns={
                Array [
                  Object {
                    "dataIndex": "name",
                    "key": "name",
                    "title": "Name",
                  },
                  Object {
                    "dataIndex": "age",
                    "key": "age",
                    "title": "Age",
                  },
                ]
              }
              expandIconAsCell={false}
              expandIconColumnIndex={0}
              expandRowByClick={false}
              expandable={[Function]}
              expanded={false}
              height={null}
              hoverKey={0}
              indent={0}
              indentSize={15}
              index={0}
              needIndentSpaced={false}
              onDestroy={[Function]}
              onExpand={[Function]}
              onHover={[Function]}
              onRowClick={[Function]}
              onRowDoubleClick={[Function]}
              prefixCls="rc-table-row"
              record={
                Object {
                  "age": 27,
                  "key": 0,
                  "name": "Lucy",
                }
              }
              store={
                Object {
                  "getState": [Function],
                  "setState": [Function],
                  "subscribe": [Function],
                }
              }
              visible={true}>
              <tr
                className="rc-table-row  rc-table-row-level-0"
                onClick={[Function]}
                onDoubleClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "height": null,
                  }
                }>
                <TableCell
                  column={
                    Object {
                      "dataIndex": "name",
                      "key": "name",
                      "title": "Name",
                    }
                  }
                  expandIcon={
                    <ExpandIcon
                      expandable={[Function]}
                      expanded={false}
                      needIndentSpaced={false}
                      onExpand={[Function]}
                      prefixCls="rc-table-row"
                      record={
                        Object {
                          "age": 27,
                          "key": 0,
                          "name": "Lucy",
                        }
                      } />
                  }
                  indent={0}
                  indentSize={15}
                  index={0}
                  prefixCls="rc-table-row"
                  record={
                    Object {
                      "age": 27,
                      "key": 0,
                      "name": "Lucy",
                    }
                  }>
                  <td
                    className=""
                    onClick={[Function]}>
                    <span
                      className="rc-table-row-indent indent-level-0"
                      style={
                        Object {
                          "paddingLeft": "0px",
                        }
                      } />
                    <ExpandIcon
                      expandable={[Function]}
                      expanded={false}
                      needIndentSpaced={false}
                      onExpand={[Function]}
                      prefixCls="rc-table-row"
                      record={
                        Object {
                          "age": 27,
                          "key": 0,
                          "name": "Lucy",
                        }
                      }>
                      <span
                        className="rc-table-row-expand-icon rc-table-row-collapsed"
                        onClick={[Function]} />
                    </ExpandIcon>
                    Lucy
                  </td>
                </TableCell>
                <TableCell
                  column={
                    Object {
                      "dataIndex": "age",
                      "key": "age",
                      "title": "Age",
                    }
                  }
                  expandIcon={null}
                  indent={0}
                  indentSize={15}
                  index={0}
                  prefixCls="rc-table-row"
                  record={
                    Object {
                      "age": 27,
                      "key": 0,
                      "name": "Lucy",
                    }
                  }>
                  <td
                    className=""
                    onClick={[Function]}>
                    27
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              childrenColumnName="children"
              className=""
              columns={
                Array [
                  Object {
                    "dataIndex": "name",
                    "key": "name",
                    "title": "Name",
                  },
                  Object {
                    "dataIndex": "age",
                    "key": "age",
                    "title": "Age",
                  },
                ]
              }
              expandIconAsCell={false}
              expandIconColumnIndex={0}
              expandRowByClick={false}
              expandable={[Function]}
              expanded={true}
              height={null}
              hoverKey={1}
              indent={0}
              indentSize={15}
              index={1}
              needIndentSpaced={false}
              onDestroy={[Function]}
              onExpand={[Function]}
              onHover={[Function]}
              onRowClick={[Function]}
              onRowDoubleClick={[Function]}
              prefixCls="rc-table-row"
              record={
                Object {
                  "age": 28,
                  "key": 1,
                  "name": "Jack",
                }
              }
              store={
                Object {
                  "getState": [Function],
                  "setState": [Function],
                  "subscribe": [Function],
                }
              }
              visible={true}>
              <tr
                className="rc-table-row  rc-table-row-level-0"
                onClick={[Function]}
                onDoubleClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "height": null,
                  }
                }>
                <TableCell
                  column={
                    Object {
                      "dataIndex": "name",
                      "key": "name",
                      "title": "Name",
                    }
                  }
                  expandIcon={
                    <ExpandIcon
                      expandable={[Function]}
                      expanded={true}
                      needIndentSpaced={false}
                      onExpand={[Function]}
                      prefixCls="rc-table-row"
                      record={
                        Object {
                          "age": 28,
                          "key": 1,
                          "name": "Jack",
                        }
                      } />
                  }
                  indent={0}
                  indentSize={15}
                  index={1}
                  prefixCls="rc-table-row"
                  record={
                    Object {
                      "age": 28,
                      "key": 1,
                      "name": "Jack",
                    }
                  }>
                  <td
                    className=""
                    onClick={[Function]}>
                    <span
                      className="rc-table-row-indent indent-level-0"
                      style={
                        Object {
                          "paddingLeft": "0px",
                        }
                      } />
                    <ExpandIcon
                      expandable={[Function]}
                      expanded={true}
                      needIndentSpaced={false}
                      onExpand={[Function]}
                      prefixCls="rc-table-row"
                      record={
                        Object {
                          "age": 28,
                          "key": 1,
                          "name": "Jack",
                        }
                      }>
                      <span
                        className="rc-table-row-expand-icon rc-table-row-expanded"
                        onClick={[Function]} />
                    </ExpandIcon>
                    Jack
                  </td>
                </TableCell>
                <TableCell
                  column={
                    Object {
                      "dataIndex": "age",
                      "key": "age",
                      "title": "Age",
                    }
                  }
                  expandIcon={null}
                  indent={0}
                  indentSize={15}
                  index={1}
                  prefixCls="rc-table-row"
                  record={
                    Object {
                      "age": 28,
                      "key": 1,
                      "name": "Jack",
                    }
                  }>
                  <td
                    className=""
                    onClick={[Function]}>
                    28
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              className=""
              columns={
                Array [
                  Object {
                    "key": "extra-row",
                    "render": [Function],
                  },
                ]
              }
              expandIconColumnIndex={0}
              expandRowByClick={false}
              expandable={false}
              indent={1}
              onDestroy={[Function]}
              onHover={[Function]}
              onRowClick={[Function]}
              onRowDoubleClick={[Function]}
              prefixCls="rc-table-expanded-row"
              store={
                Object {
                  "getState": [Function],
                  "setState": [Function],
                  "subscribe": [Function],
                }
              }
              visible={true}>
              <tr
                className="rc-table-expanded-row  rc-table-expanded-row-level-1"
                onClick={[Function]}
                onDoubleClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "height": undefined,
                  }
                }>
                <TableCell
                  column={
                    Object {
                      "key": "extra-row",
                      "render": [Function],
                    }
                  }
                  expandIcon={
                    <ExpandIcon
                      expandable={false}
                      expanded={undefined}
                      needIndentSpaced={undefined}
                      onExpand={undefined}
                      prefixCls="rc-table-expanded-row"
                      record={undefined} />
                  }
                  indent={1}
                  prefixCls="rc-table-expanded-row">
                  <td
                    className=""
                    colSpan={2}
                    onClick={[Function]}>
                    <span
                      className="rc-table-expanded-row-indent indent-level-1"
                      style={
                        Object {
                          "paddingLeft": "NaNpx",
                        }
                      } />
                    <ExpandIcon
                      expandable={false}
                      prefixCls="rc-table-expanded-row" />
                    <p>
                      extra data
                    </p>
                  </td>
                </TableCell>
              </tr>
            </TableRow>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</Table>
`;

exports[`Table.expand expand all rows by default 1`] = `
<div
  class="rc-table rc-table-scroll-position-left">
  <div
    class="rc-table-content">
    <div
      class="rc-table-body">
      <table
        class="">
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead">
          <tr>
            <th
              class="">
              Name
            </th>
            <th
              class="">
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody">
          <tr
            class="rc-table-row  rc-table-row-level-0">
            <td
              class="">
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px;" />
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded" />
              Lucy
            </td>
            <td
              class="">
              27
            </td>
          </tr>
          <tr
            class="rc-table-expanded-row  rc-table-expanded-row-level-1">
            <td
              class=""
              colspan="2">
              <span
                class="rc-table-expanded-row-indent indent-level-1"
                style="padding-left:NaNpx;" />
              <p>
                extra data
              </p>
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0">
            <td
              class="">
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px;" />
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded" />
              Jack
            </td>
            <td
              class="">
              28
            </td>
          </tr>
          <tr
            class="rc-table-expanded-row  rc-table-expanded-row-level-1">
            <td
              class=""
              colspan="2">
              <span
                class="rc-table-expanded-row-indent indent-level-1"
                style="padding-left:NaNpx;" />
              <p>
                extra data
              </p>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.expand expand row by click 1`] = `
<Table
  bodyStyle={Object {}}
  childrenColumnName="children"
  columns={
    Array [
      Object {
        "dataIndex": "name",
        "key": "name",
        "title": "Name",
      },
      Object {
        "dataIndex": "age",
        "key": "age",
        "title": "Age",
      },
    ]
  }
  data={
    Array [
      Object {
        "age": 27,
        "key": 0,
        "name": "Lucy",
      },
      Object {
        "age": 28,
        "key": 1,
        "name": "Jack",
      },
    ]
  }
  defaultExpandAllRows={false}
  defaultExpandedRowKeys={Array []}
  emptyText={[Function]}
  expandIconAsCell={false}
  expandIconColumnIndex={0}
  expandedRowClassName={[Function]}
  expandedRowRender={[Function]}
  getBodyWrapper={[Function]}
  indentSize={15}
  onExpand={[Function]}
  onExpandedRowsChange={[Function]}
  onRowClick={[Function]}
  onRowDoubleClick={[Function]}
  prefixCls="rc-table"
  rowClassName={[Function]}
  rowKey="key"
  rowRef={[Function]}
  scroll={Object {}}
  showHeader={true}
  style={Object {}}
  useFixedHeader={false}>
  <div
    className="rc-table rc-table-scroll-position-left"
    style={Object {}}>
    <div
      className="rc-table-content">
      <div
        className="rc-table-body"
        onMouseOver={[Function]}
        onScroll={[Function]}
        onTouchStart={[Function]}
        style={Object {}}>
        <table
          className=""
          style={Object {}}>
          <colgroup>
            <col
              style={
                Object {
                  "minWidth": undefined,
                  "width": undefined,
                }
              } />
            <col
              style={
                Object {
                  "minWidth": undefined,
                  "width": undefined,
                }
              } />
          </colgroup>
          <TableHeader
            prefixCls="rc-table"
            rowStyle={null}
            rows={
              Array [
                Array [
                  Object {
                    "children": "Name",
                    "className": "",
                    "key": "name",
                  },
                  Object {
                    "children": "Age",
                    "className": "",
                    "key": "age",
                  },
                ],
              ]
            }>
            <thead
              className="rc-table-thead">
              <tr
                style={null}>
                <th
                  className="">
                  Name
                </th>
                <th
                  className="">
                  Age
                </th>
              </tr>
            </thead>
          </TableHeader>
          <tbody
            className="rc-table-tbody">
            <TableRow
              childrenColumnName="children"
              className=""
              columns={
                Array [
                  Object {
                    "dataIndex": "name",
                    "key": "name",
                    "title": "Name",
                  },
                  Object {
                    "dataIndex": "age",
                    "key": "age",
                    "title": "Age",
                  },
                ]
              }
              expandIconAsCell={false}
              expandIconColumnIndex={0}
              expandRowByClick={false}
              expandable={[Function]}
              expanded={true}
              height={null}
              hoverKey={0}
              indent={0}
              indentSize={15}
              index={0}
              needIndentSpaced={false}
              onDestroy={[Function]}
              onExpand={[Function]}
              onHover={[Function]}
              onRowClick={[Function]}
              onRowDoubleClick={[Function]}
              prefixCls="rc-table-row"
              record={
                Object {
                  "age": 27,
                  "key": 0,
                  "name": "Lucy",
                }
              }
              store={
                Object {
                  "getState": [Function],
                  "setState": [Function],
                  "subscribe": [Function],
                }
              }
              visible={true}>
              <tr
                className="rc-table-row  rc-table-row-level-0"
                onClick={[Function]}
                onDoubleClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "height": null,
                  }
                }>
                <TableCell
                  column={
                    Object {
                      "dataIndex": "name",
                      "key": "name",
                      "title": "Name",
                    }
                  }
                  expandIcon={
                    <ExpandIcon
                      expandable={[Function]}
                      expanded={true}
                      needIndentSpaced={false}
                      onExpand={[Function]}
                      prefixCls="rc-table-row"
                      record={
                        Object {
                          "age": 27,
                          "key": 0,
                          "name": "Lucy",
                        }
                      } />
                  }
                  indent={0}
                  indentSize={15}
                  index={0}
                  prefixCls="rc-table-row"
                  record={
                    Object {
                      "age": 27,
                      "key": 0,
                      "name": "Lucy",
                    }
                  }>
                  <td
                    className=""
                    onClick={[Function]}>
                    <span
                      className="rc-table-row-indent indent-level-0"
                      style={
                        Object {
                          "paddingLeft": "0px",
                        }
                      } />
                    <ExpandIcon
                      expandable={[Function]}
                      expanded={true}
                      needIndentSpaced={false}
                      onExpand={[Function]}
                      prefixCls="rc-table-row"
                      record={
                        Object {
                          "age": 27,
                          "key": 0,
                          "name": "Lucy",
                        }
                      }>
                      <span
                        className="rc-table-row-expand-icon rc-table-row-expanded"
                        onClick={[Function]} />
                    </ExpandIcon>
                    Lucy
                  </td>
                </TableCell>
                <TableCell
                  column={
                    Object {
                      "dataIndex": "age",
                      "key": "age",
                      "title": "Age",
                    }
                  }
                  expandIcon={null}
                  indent={0}
                  indentSize={15}
                  index={0}
                  prefixCls="rc-table-row"
                  record={
                    Object {
                      "age": 27,
                      "key": 0,
                      "name": "Lucy",
                    }
                  }>
                  <td
                    className=""
                    onClick={[Function]}>
                    27
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              className=""
              columns={
                Array [
                  Object {
                    "key": "extra-row",
                    "render": [Function],
                  },
                ]
              }
              expandIconColumnIndex={0}
              expandRowByClick={false}
              expandable={false}
              indent={1}
              onDestroy={[Function]}
              onHover={[Function]}
              onRowClick={[Function]}
              onRowDoubleClick={[Function]}
              prefixCls="rc-table-expanded-row"
              store={
                Object {
                  "getState": [Function],
                  "setState": [Function],
                  "subscribe": [Function],
                }
              }
              visible={true}>
              <tr
                className="rc-table-expanded-row  rc-table-expanded-row-level-1"
                onClick={[Function]}
                onDoubleClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "height": undefined,
                  }
                }>
                <TableCell
                  column={
                    Object {
                      "key": "extra-row",
                      "render": [Function],
                    }
                  }
                  expandIcon={
                    <ExpandIcon
                      expandable={false}
                      expanded={undefined}
                      needIndentSpaced={undefined}
                      onExpand={undefined}
                      prefixCls="rc-table-expanded-row"
                      record={undefined} />
                  }
                  indent={1}
                  prefixCls="rc-table-expanded-row">
                  <td
                    className=""
                    colSpan={2}
                    onClick={[Function]}>
                    <span
                      className="rc-table-expanded-row-indent indent-level-1"
                      style={
                        Object {
                          "paddingLeft": "NaNpx",
                        }
                      } />
                    <ExpandIcon
                      expandable={false}
                      prefixCls="rc-table-expanded-row" />
                    <p>
                      extra data
                    </p>
                  </td>
                </TableCell>
              </tr>
            </TableRow>
            <TableRow
              childrenColumnName="children"
              className=""
              columns={
                Array [
                  Object {
                    "dataIndex": "name",
                    "key": "name",
                    "title": "Name",
                  },
                  Object {
                    "dataIndex": "age",
                    "key": "age",
                    "title": "Age",
                  },
                ]
              }
              expandIconAsCell={false}
              expandIconColumnIndex={0}
              expandRowByClick={false}
              expandable={[Function]}
              expanded={false}
              height={null}
              hoverKey={1}
              indent={0}
              indentSize={15}
              index={1}
              needIndentSpaced={false}
              onDestroy={[Function]}
              onExpand={[Function]}
              onHover={[Function]}
              onRowClick={[Function]}
              onRowDoubleClick={[Function]}
              prefixCls="rc-table-row"
              record={
                Object {
                  "age": 28,
                  "key": 1,
                  "name": "Jack",
                }
              }
              store={
                Object {
                  "getState": [Function],
                  "setState": [Function],
                  "subscribe": [Function],
                }
              }
              visible={true}>
              <tr
                className="rc-table-row  rc-table-row-level-0"
                onClick={[Function]}
                onDoubleClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                style={
                  Object {
                    "height": null,
                  }
                }>
                <TableCell
                  column={
                    Object {
                      "dataIndex": "name",
                      "key": "name",
                      "title": "Name",
                    }
                  }
                  expandIcon={
                    <ExpandIcon
                      expandable={[Function]}
                      expanded={false}
                      needIndentSpaced={false}
                      onExpand={[Function]}
                      prefixCls="rc-table-row"
                      record={
                        Object {
                          "age": 28,
                          "key": 1,
                          "name": "Jack",
                        }
                      } />
                  }
                  indent={0}
                  indentSize={15}
                  index={1}
                  prefixCls="rc-table-row"
                  record={
                    Object {
                      "age": 28,
                      "key": 1,
                      "name": "Jack",
                    }
                  }>
                  <td
                    className=""
                    onClick={[Function]}>
                    <span
                      className="rc-table-row-indent indent-level-0"
                      style={
                        Object {
                          "paddingLeft": "0px",
                        }
                      } />
                    <ExpandIcon
                      expandable={[Function]}
                      expanded={false}
                      needIndentSpaced={false}
                      onExpand={[Function]}
                      prefixCls="rc-table-row"
                      record={
                        Object {
                          "age": 28,
                          "key": 1,
                          "name": "Jack",
                        }
                      }>
                      <span
                        className="rc-table-row-expand-icon rc-table-row-collapsed"
                        onClick={[Function]} />
                    </ExpandIcon>
                    Jack
                  </td>
                </TableCell>
                <TableCell
                  column={
                    Object {
                      "dataIndex": "age",
                      "key": "age",
                      "title": "Age",
                    }
                  }
                  expandIcon={null}
                  indent={0}
                  indentSize={15}
                  index={1}
                  prefixCls="rc-table-row"
                  record={
                    Object {
                      "age": 28,
                      "key": 1,
                      "name": "Jack",
                    }
                  }>
                  <td
                    className=""
                    onClick={[Function]}>
                    28
                  </td>
                </TableCell>
              </tr>
            </TableRow>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</Table>
`;

exports[`Table.expand expand rows by defaultExpandedRowKeys 1`] = `
<div
  class="rc-table rc-table-scroll-position-left">
  <div
    class="rc-table-content">
    <div
      class="rc-table-body">
      <table
        class="">
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead">
          <tr>
            <th
              class="">
              Name
            </th>
            <th
              class="">
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody">
          <tr
            class="rc-table-row  rc-table-row-level-0">
            <td
              class="">
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px;" />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed" />
              Lucy
            </td>
            <td
              class="">
              27
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0">
            <td
              class="">
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px;" />
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded" />
              Jack
            </td>
            <td
              class="">
              28
            </td>
          </tr>
          <tr
            class="rc-table-expanded-row  rc-table-expanded-row-level-1">
            <td
              class=""
              colspan="2">
              <span
                class="rc-table-expanded-row-indent indent-level-1"
                style="padding-left:NaNpx;" />
              <p>
                extra data
              </p>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.expand renders expand icon as cell 1`] = `
<div
  class="rc-table rc-table-scroll-position-left">
  <div
    class="rc-table-content">
    <div
      class="rc-table-body">
      <table
        class="">
        <colgroup>
          <col
            class="rc-table-expand-icon-col" />
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead">
          <tr>
            <th
              class="rc-table-expand-icon-th"
              rowspan="1"
              title="" />
            <th
              class="">
              Name
            </th>
            <th
              class="">
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody">
          <tr
            class="rc-table-row  rc-table-row-level-0">
            <td
              class="rc-table-row-expand-icon-cell">
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed" />
            </td>
            <td
              class="">
              Lucy
            </td>
            <td
              class="">
              27
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0">
            <td
              class="rc-table-row-expand-icon-cell">
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed" />
            </td>
            <td
              class="">
              Jack
            </td>
            <td
              class="">
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.expand renders expand icon to the specify column 1`] = `
<div
  class="rc-table rc-table-scroll-position-left">
  <div
    class="rc-table-content">
    <div
      class="rc-table-body">
      <table
        class="">
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead">
          <tr>
            <th
              class="">
              Name
            </th>
            <th
              class="">
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody">
          <tr
            class="rc-table-row  rc-table-row-level-0">
            <td
              class="">
              Lucy
            </td>
            <td
              class="">
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px;" />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed" />
              27
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0">
            <td
              class="">
              Jack
            </td>
            <td
              class="">
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px;" />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed" />
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.expand renders expand row correctly 1`] = `
<div
  class="rc-table rc-table-scroll-position-left">
  <div
    class="rc-table-content">
    <div
      class="rc-table-body">
      <table
        class="">
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead">
          <tr>
            <th
              class="">
              Name
            </th>
            <th
              class="">
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody">
          <tr
            class="rc-table-row  rc-table-row-level-0">
            <td
              class="">
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px;" />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed" />
              Lucy
            </td>
            <td
              class="">
              27
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0">
            <td
              class="">
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px;" />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed" />
              Jack
            </td>
            <td
              class="">
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.expand renders expend row class correctly 1`] = `
<div
  class="rc-table rc-table-scroll-position-left">
  <div
    class="rc-table-content">
    <div
      class="rc-table-body">
      <table
        class="">
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead">
          <tr>
            <th
              class="">
              Name
            </th>
            <th
              class="">
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody">
          <tr
            class="rc-table-row  rc-table-row-level-0">
            <td
              class="">
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px;" />
              <span
                class="rc-table-row-expand-icon rc-table-row-expanded" />
              Lucy
            </td>
            <td
              class="">
              27
            </td>
          </tr>
          <tr
            class="rc-table-expanded-row expand-row-test-class-name rc-table-expanded-row-level-1">
            <td
              class=""
              colspan="2">
              <span
                class="rc-table-expanded-row-indent indent-level-1"
                style="padding-left:NaNpx;" />
              <p>
                extra data
              </p>
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0">
            <td
              class="">
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px;" />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed" />
              Jack
            </td>
            <td
              class="">
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Table.expand renders nested data correctly 1`] = `
<div
  class="rc-table rc-table-scroll-position-left">
  <div
    class="rc-table-content">
    <div
      class="rc-table-body">
      <table
        class="">
        <colgroup>
          <col />
          <col />
        </colgroup>
        <thead
          class="rc-table-thead">
          <tr>
            <th
              class="">
              Name
            </th>
            <th
              class="">
              Age
            </th>
          </tr>
        </thead>
        <tbody
          class="rc-table-tbody">
          <tr
            class="rc-table-row  rc-table-row-level-0">
            <td
              class="">
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px;" />
              <span
                class="rc-table-row-expand-icon rc-table-row-collapsed" />
              Lucy
            </td>
            <td
              class="">
              27
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-1"
            style="display:none;">
            <td
              class="">
              <span
                class="rc-table-row-indent indent-level-1"
                style="padding-left:15px;" />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced" />
              Jim
            </td>
            <td
              class="">
              2
            </td>
          </tr>
          <tr
            class="rc-table-row  rc-table-row-level-0">
            <td
              class="">
              <span
                class="rc-table-row-indent indent-level-0"
                style="padding-left:0px;" />
              <span
                class="rc-table-row-expand-icon rc-table-row-spaced" />
              Jack
            </td>
            <td
              class="">
              28
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
